8 prelim pages are sent to another proof

--- a/copyright.tex
+++ b/copyright.tex
@@ -15,7 +15,7 @@
 {\rm \copyright \ Publishers}\\[7pt]
 {\rm First Edition : 2020}\\[7pt]
 {\rm No. of Copies : 2000}\\[7pt]
-{\rm Price :} \rupee
+{\rm Price : \rupee\,1000}
 
 \bigskip
 
@@ -52,7 +52,7 @@ puTagaLu : 38 + 896
 {\rm \copyright} parxkAshakaru\\[7pt]
 parxthama mudarxNa : 2020\\[7pt]
 parxtigaLu : 2000\\[10pt]
-bele : \rupee
+bele : \rupee\,1000
 
 \bigskip
 
