--- a/nivedane.tex
+++ b/nivedane.tex
@@ -27,7 +27,7 @@ vijAcnxnada beLavaNige visAtxragoLuLxtitxdadxMte kale, saMsakxqqti, dhamaRgaLa b
 
 \eject
 
-BAratada bahumuKi saMsakxqqtiya aneVka majalugaLanunx talasapxshiRyAgi iMdu adhayxyana mADabeVkAgide. ililxya saMsakxqqtiya veYvidhayx matutx koDukoLuLxvikegaLanunx parishiVlisabeVkAgide. Adare BArata vasAhaturASaTxrXvAda meVle, pAshAcxtayx jAcnxnashAKegaLa nera\-viniMda ililxya saMsakxqqtiyanunx saraLa reVKAtamxkavAgi atheYRsalAgutitxde. idakekx badalAgi idanunx iDiyAgi oMdu tAtitxvXka neleyalilx noVDuva agatayxvide. udAharaNege BAratadalilx aneVka jAti-upajAti, paMgaDa-upapaMgaDagaLive. avugaLa naDuvaNa veYvidhayx\-vanunx visatxqqta adhayxyanakekx oLapaDisi vasutxniSaThxvAgi dAKalisi adhayxyanakekx oLapaDisabeVkAgide. idu AgadehoVdare AyA \hbox{viBAgada} jAcnxnashAKegaLa amUlayx pariBASegaLu mareyAgihoVguva apAyavide. udAharaNege kaqSige saMbaMdhisida mUla savxrUpa iMdu aLivinaMcige baMdu talupide. aneVka kaqSi upakaraNagaLeV heVLahesarilalx\-vAgive. I daqSiTxyiMda elAlx sAMparxdAyika jAcnxnashAKegaLa vivaragaLanUnx saMkalisuvudu agatayx. 
+BAratada bahumuKi saMsakxqqtiya aneVka majalugaLanunx talasapxshiRyAgi iMdu adhayxyana mADabeVkAgide. ililxya saMsakxqqtiya veYvidhayx matutx koDukoLuLxvikegaLanunx parishiVlisabeVkAgide. Adare BArata vasAhaturASaTxrXvAda meVle, pAshAcxtayx jAcnxnashAKegaLa nera\-viniMda ililxya saMsakxqqtiyanunx saraLa reVKAtamxkavAgi atheYRsalAgutitxde. idakekx badalAgi idanunx iDiyAgi oMdu tAtitxvXka neleyalilx noVDuva agatayxvide. udAharaNege BAratadalilx aneVka jAti-upajAti, paMgaDa-upapaMgaDagaLive. avugaLa naDuvaNa veYvidhayx\-vanunx visatxqqta adhayxyanakekx oLapaDisi vasutxniSaThxvAgi dAKalisi adhayxyanakekx oLapaDisabeVkAgide. idu AgadehoVdare AyA \hbox{viBAgada} jAcnxnashAKegaLa amUlayx pariBASegaLu mareyAgihoVguva apAyavide. udAharaNege kaqSige saMbaMdhisida mUla savxrUpa iMdu aLivinaMcige baMdu talupide. aneVka kaqSi upakaraNagaLeV heVLahesarilalx\-vAgive. I daqSiTxyiMda elAlx sAMparx\-dAyika jAcnxnashAKegaLa vivaragaLanUnx saMkalisuvudu agatayx. 
 
 \medskip
 
@@ -35,19 +35,19 @@ I hinenxleyalilx BAratada oMdu parxmuKa dhamaRvAda viVrasheYva-liMgAyatada tAtit
 
 \medskip
 
-vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943ralilx shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgati\-gaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVsha\-veMdare basava samitiya \textbf{viVrasheYva pAriBASika padakoVsha} hAgU porx. eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTa\-vanunx DA. enf.\,ji. mahadeVvapapxnavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa \hbox{viVrasheYva} kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAri\-BASika padagaLanunx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya \textbf{viVrasheYva pAriBASika padakoVsha} vanunx DA. eM. shivakumArasAvxmi, DA. si. shiva\-kumArasAvxmi, DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
+vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943ralilx shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgati\-gaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVsha\-veMdare basava samitiya \textbf{viVrasheYva pAriBASika padakoVsha} hAgU porx. eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTa\-vanunx DA. enf.\,ji. mahadeVvapapxnavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa \hbox{viVrasheYva} kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAri\-BASika padagaLanunx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya \textbf{viVrasheYva pAriBASika padakoVsha} vanunx DA. eM. shivakumAra\-sAvxmi, DA. si. shivakumAra\-sAvxmi, DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx \textbf{viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
 
 \medskip
 
-I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVsha} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmigaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda DA. ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, porx. jayatiVthARcArayx maLagiyavaru saBege Agamisidadxru. kaqti biDugaDeyAda saMdaBaRdalilx saBeyalilx upasithxtaridadx DA. esf.eM. vaqSaBeVMdarx\-sAvxmi, porx. ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU tarabeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida DA. ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I manavige danigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDaleV avaru tamamx mAtinaMte anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
+I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVsha} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahA\-sAvxmigaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf\break saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda\break DA. ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, porx. jayatiVthARcArayx maLagiyavaru saBege Agamisidadxru. kaqti biDugaDeyAda saMdaBaRdalilx saBeyalilx upasithxtaridadx DA. esf.eM. vaqSaBeVMdarx\-sAvxmi, porx. ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU tarabeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida\break DA. ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I manavige danigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru saMsakxqqta garxMtha\-vanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDaleV avaru tamamx mAtinaMte anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
 
 \medskip
 
-I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa \hbox{viVrasheYva} shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV esf. shivaNaNx, DA. enf.ji. mAhadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
+I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa \hbox{viVrasheYva} shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru \hbox{sutUtxru} shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV,\break porx.\,ji.esf.\,sidadhxliMgayayx, DA.\,go.ru.\,cananxbasapapx, DA.\,esf.\,vidAyxshaMkara, DA.\,enf.esf.\,tArAnAtha, \hbox{DA.\,Ti.Arf.\,mahadeVvayayx}, shirxV esf. shivaNaNx, DA. enf.ji. mAhadeVvapapx, DA. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf.\break pUNARnaMda muMtAdavaru BAgavahisidadxru.
 
 \medskip
 
-hiVge visAtxravAda caceR naDeda baLika niGaMTuvina pArxthamika kAyaR AraMBagoMDitu. modalige saMsakxqqta\-dalilx racita\-vAgidadx viVrasheYva pAriBASika padakoVshavanunx kananxDakekx BASAMtarisalu karxma keYgoLaLxlAyitu. idara saMpUNaR \hbox{hoNeyanunx} DA. si. shivakumAra\-sAvxmiyavaru vahisikoMDaru. jotege haLeya niGaMTuvinalilx biTuTxhoVgirabahudAda mahatavxda saMsakxqqta garxMthagaLa pAriBASika padagaLanunx vidAvxMsarugaLa mUlaka saMgarxha mADisi, avugaLanUnx I BASAMtara kAyaRdalilx seVrisikoLaLxlu nidhaRrisalAyitu.
+hiVge visAtxravAda caceR naDeda baLika niGaMTuvina pArxthamika kAyaR AraMBagoMDitu. modalige saMsakxqqta\-dalilx racita\-vAgidadx viVrasheYva pAriBASika padakoVshavanunx kananxDakekx BASAMtarisalu karxma keYgoLaLxlAyitu. idara saMpUNaR \hbox{hoNeyanunx}\break DA. si. shivakumAra\-sAvxmiyavaru vahisikoMDaru. jotege haLeya niGaMTuvinalilx biTuTxhoVgirabahudAda mahatavxda saMsakxqqta garxMthagaLa pAriBASika padagaLanunx vidAvxMsarugaLa mUlaka saMgarxha mADisi, avugaLanUnx I BASAMtara kAyaRdalilx seVrisikoLaLxlu\break nidhaRrisalAyitu.
 
 \medskip
 
@@ -71,7 +71,7 @@ padapaTiTxkeyanunx niVDi padasaMgarxha mADalu koVridAga adaralilx AyekxyAda pada
 
 \newpage
 
-I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi, pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru. avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx sidadhxpaDisi\-koDuvaMte koVri, avaru  niSapxtitxgaLanunx odagisikoTaTxru. bahuteVka saMsakxqqta padagaLige I niSapxtitxyanunx mAtarx niVDa\-lAgide. 
+I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi, pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru. avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx sidadhxpaDisi\-koDuvaMte koVralAyitu, avaru  niSapxtitxgaLanunx koTaTxru. saMsakxqqta padagaLige mAtarx I niSapxtitxyanunx niVDa\-lAgide. 
 
 \medskip
 
@@ -79,19 +79,19 @@ I elalx pUvaRBAviVkAyaRgaLu mugida baLika ulelxVKada padagaLige athaR bareyuva k
 
 \medskip
 
-idelalx Agi modala haMtada akaSxrajoVDaNeya kAyaR pArxraMBavAyitu parxyoVgaBAgadalilx niVDalAgidadx vacanagaLa paThAyxMsha apUNaRvAgidAdxga ulelxVKada aBipArxya sapxSaTxvAguvaMte parxyoVgagaLanunx athaRpUNaRvAgi niVDalAyitu. parxti vacanavanunx parishiVlisuvAga mUlaparxtigaLanunx noVDuvaMteyeV kAvayxgaLanunx parishiVlisuvAgalU mUlavanunx noVDiyeV parxti sAlugaLanUnx mAtarx dAKalisabeVkAgitutx. vacanagaLa ulelxVKavanunx niVDuvAga keVvala oMdu ulelxVKavanunx niVDuva badalu  pArxtinidhikavAgi karxmavAgi basavaNaNx, alalxmaparxBu, cananxbasavaNaNx hAgU obabxru vacanakAtiRya hAgU ininxtara alakiSxta vacanakArara ulelxVKagaLanunx niVDuvudu sAMsakxqqtika samagarxteyanunx taMdukoDutatxde eMba aBipArxyakekx baralAyitu.
+idelalx Agi modala haMtada akaSxrajoVDaNeya kAyaR pArxraMBavAyitu. parxyoVgaBAgadalilx niVDalAgidadx vacanagaLa paThAyxMsha apUNaRvAgidAdxga ulelxVKada aBipArxya sapxSaTxvAguvaMte parxyoVgagaLanunx athaRpUNaRvAgi niVDalAyitu. parxti vacanavanunx parishiVlisuvAga mUlaparxtigaLanunx noVDuvaMteyeV kAvayxgaLanunx parishiVlisuvAgalU mUlavanunx noVDiyeV parxti sAlugaLanUnx dAKalisabeVkAgitutx. vacanagaLa ulelxVKavanunx niVDuvAga keVvala oMdu ulelxVKavanunx niVDuva badalu  pArxtinidhikavAgi karxmavAgi basavaNaNx, alalxmaparxBu, cananxbasavaNaNx hAgU obabxru vacanakAtiRya hAgU ininxtara alakiSxta vacanakArara ulelxVKagaLanunx niVDuvudu agatayx. idu niGaMTuvige sAMsakxqqtika samagarxteyanunx taMdukoDutatxde eMba aBipArxyakekx baralAyitu.
 
 \medskip
 
-I kAyaRdalilx namamx neravige baMdadudx ``vacana saMcaya DATfkAM'' eMba  Ayxpf namamx upayoVgakekx baMditu. I Ayxpf anunx DA. O.elf. nAgaBUSaNa\-sAvxmi, shirxV vasudheVMdarx, shirxV ecf.elf. OMshivaparxkAshf, shirxV ke. deVvarAju, shirxVmati ecf. pavitarx.  ivaru\-gaLu rUpisidAdxre.  idara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya shirxV ji. gULapapxsAvxmi, shirxV Arf.esf. honanxsheTiTx, shirxV pi.esf. kumArf,  shirxV maMjunAtha, shirxV pi. parxBusAvxmi, DA. pi.esf. sudiVpf, shirxV enf.eM. kaqSaNxpapx, shirxV ecf.emf. nAgaBUSaNa, shirxV emf.esf. naTarAjf, shirxV pi. gurupAdasAvxmi, shirxV ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU shirxV eM.esf. maMjunAthf, shirxV sidadhxrAju, shirxV ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. saMsakxqqtada BAgagaLanunx vidAvxnf DA. ecf.vi. nAgarAjarAvfravaru pariSakxrisi koTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
+I kAyaRdalilx ``vacana saMcaya DATfkAM'' eMba  Ayxpf namamx upayoVgakekx baMditu. I Ayxpf anunx DA. O.elf. nAgaBUSaNa\-sAvxmi, shirxV vasudheVMdarx, shirxV ecf.elf. OMshivaparxkAshf, shirxV ke. deVvarAju, shirxVmati ecf. pavitarx.  ivaru\-gaLu rUpisidAdxre.  idara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya shirxV ji. gULapapxsAvxmi, shirxV Arf.esf. kumArf, shirxV honanxsheTiTx, shirxV pi.esf. maMjunAtha, DA. parxBusAvxmi, DA. pi.esf. sudiVpf,\break shirxV enf.eM. kaqSaNxpapx, shirxV ecf.emf. nAgaBUSaNa, shirxV emf.esf. naTarAjf, shirxV pi. gurupAdasAvxmi, shirxV ecf.pi. \hbox{shirxVdhara} muMtAda kananxDa adhAyxpakaru hAgU shirxV eM.esf. maMjunAthf, shirxV sidadhxrAju, shirxV ruderxVshf hAgU itare gaNakayaMtarx\break sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. saMsakxqqtada BAgagaLanunx vidAvxnf DA. ecf.vi. nAgarAja\-rAvfravaru pariSakxrisi koTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
 
 \medskip
 
-I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasha\-rAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, vidAvxnf DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. \hbox{pUNARnaMda}, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBe\-gaLanunx naDesi saBA\-parxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTu\-vige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU \hbox{meYsUru} vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu.
+I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasha\-rAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, vidAvxnf DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi,\break shirxV. Arf.esf. \hbox{pUNARnaMda}, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBe\-gaLanunx naDesi saBA\-parxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTu\-vige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahAvidAyxpiVThada shirxV basavaNaNxnavaru hAgU \hbox{meYsUru} vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu.
 
 \medskip
 
-BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNeyiMda kUDidudx, parxmANaBUtavU, samagarxvU Ada \textbf{shivapada ratanxkoVsha} kaqtiyu sumAru sAvira puTagaLa baqhatf garxMthavAgide. parxti puTadalilxyU eraDu aMkaNagaLive. I padakoVshadalilx anubaMdhada ulelxVKagaLanunx biTuTx 4,681 muKayx ulelxVKagaLanUnx, sumAru 40,000 kUkx hecucx parxyoVga\-gaLanUnx niVDalAgide. iduvarege baMdiruva bahuteVka viVrasheYva pAriBASika padakoVshagaLiMda sahAya paDedidadxrU I niGaMTu avugaLa saMgarxharUpa\-valalx. I hiMdina elAlx padakoVshagaLigiMta BinanxvAgi hecicxna adhayxyana sAmagirxyanunx oLagoMDide. 
+BASAshAsatxrXda tatatxvXgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNeyiMda kUDidadx, parxmANaBUtavU, samagarxvU Ada \textbf{shivapada ratanxkoVsha} kaqtiyu sumAru sAvira puTagaLa baqhatf garxMthavAgide. parxti puTadalilxyU eraDu aMkaNagaLive. I padakoVshadalilx anubaMdhada ulelxVKagaLanunx biTuTx 4,681 muKayx ulelxVKagaLanUnx, sumAru 40,000 kUkx hecucx parxyoVga\-gaLanUnx niVDalAgide. iduvarege baMdiruva bahuteVka viVrasheYva pAriBASika padakoVshagaLiMda sahAya paDedidadxrU I niGaMTu avugaLa saMgarxharUpa\-valalx. I hiMdina elAlx padakoVshagaLigiMta BinanxvAgi hecicxna adhayxyana sAmagirxyanunx oLagoMDide. 
 
 \newpage
 
@@ -256,15 +256,15 @@ I garxMthakekx beVkAda dAshaRnikate, tAtitxvXka savxrUpavanunx niVDidavaru vijay
 
 \smallskip
 
-I pAriBASika garxMtha racane sArataH oMdu vidavxtitxna kAyaR; atayxMta sharxmadAyakavAda kAyaR. idu atayxMta veYjAcnxnikavAgi, vidavxtUpxNaRvAgi racitavAgideyeMbudu namamx aBipArxya. I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf. sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta \hbox{viVrasheYva} pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi, kAyaRnivARhaka saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike I yoVjanege oMdu Ganateyanunx taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
+I pAriBASika garxMtha racane sArataH oMdu vidavxtitxna kAyaR; atayxMta sharxmadAyakavAda kAyaR. idu atayxMta veYjAcnxnika\-vAgi, vidavxtUpxNaRvAgi racitavAgideyeMbudu namamx aBipArxya. I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf. sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha,\break DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta \hbox{viVrasheYva} pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhi\-kaqta cAlane niVDida DA. si. shivakumArasAvxmi, kAyaRnivARhaka saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVne. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike I yoVjanege oMdu Ganateyanunx taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
 
 \smallskip
 
-I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda shirxV imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU porx. esf. naMjuMDayayxnavaru avaranUnx manaHpUvaRkavAgi samxrisutetxVve.
+I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda pUjayx imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU\break porx. esf. naMjuMDayayxnavarugaLanunx manaHpUvaRkavAgi samxrisutetxVve.
 
 \smallskip
 
-I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshakashirxV ke.si. shivapapxnavarige, Igina nideVRshaka porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarfravara eDebiDada saha\-kArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx athaRpUNaRvAda muKapuTavanunx racisikoTaTx shirxV eM.esf. maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
+I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshaka shirxV ke.si. shivapapxnavarige, Igina nideVRshaka\break porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarfravara eDebiDada saha\-kArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx athaRpUNaRvAda muKapuTavanunx racisikoTaTx\break shirxV eM.esf. maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
 
 \smallskip
 
