--- a/nalkunudi.tex
+++ b/nalkunudi.tex
@@ -8,11 +8,11 @@
 
 \medskip
 
-I payARpatx hosa hotatxge rUpisidavaru, racisidavaru sherxVSaThx vidAvxMsaru; shAsatxrXsAhitayx keSxVtarxdalilx bahushurxtaru. shabadx avara saMpatutx; athaR avara anuBoVga; sArasavxta duDimeyadu avara tapasusx. avara bahu parisharxmada PalaviV niGaMTu. adhayxyana\-shiVlarigidu Asare. sAmAnayx sAdhakarigidu sahAyaka mAgaRdashiR.
+I payARpatx hosa hotatxge rUpisidavaru, racisidavaru sherxVSaThx vidAvxMsaru; shAsatxrXsAhitayx keSxVtarxdalilx bahushurxtaru. shabadx avara saMpatutx; athaR avara anuBoVga; sArasavxta duDime avara tapasusx. avara bahu parisharxmada PalaviV niGaMTu. adhayxyana\-shiVlarigidu Asare. sAmAnayx sAdhakarigidu sahAyaka mAgaRdashiR.
 
 \medskip
 
-paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx shirxVgaLavaru dhamaR, tatatxvXgaLa ciMtakaru. vidAyxrAdhakaru. sAMsakxqqtika kaloVpAsakaru. avara sAninxdhayxdalilx nUrAru sArasavxta baqhadudAyxnagaLu beLedive. sAhitayx aMbujagaLu araLive. idiVga araLidudu `shivapada ratanxkoVsha' kusuma! adaralilxruva pada-padAthaR-parimaLavu shivajAcnxnAsakatxra valayadalelxlalx haraDaleMdu hAreYsuve.
+paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx shirxVgaLavaru dhamaR, tatatxvXgaLa ciMtakaru. vidAyxrAdhakaru. sAMsakxqqtika\break kaloVpAsakaru. avara sAninxdhayxdalilx nUrAru sArasavxta baqhadudAyxnagaLu beLedive. sAhitayx aMbujagaLu araLive. idiVga araLidudu `shivapada ratanxkoVsha' kusuma! adaralilxruva pada-padAthaR-parimaLavu shivajAcnxnAsakatxra valayadalelxlalx haraDaleMdu hAreYsuve.
 
 \vskip 1.5cm
 
