--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -2,29 +2,27 @@
 {\Huge\bfseries parxkAshakara nuDi}
 \end{center}
 
+\smallskip
+
 I nADina savaRtoVmuKa aBivaqdidhxge sharxmisi harasutitxruva dhAmiRka gurupiVThagaLalilx oMdenisida, meYsUru jilelxya kapilA\-nadiya daDadalilxruva sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThavu tananxdeV Ada ujavxla itihAsavanunx hoMdide.
 
-\medskip
+\smallskip
 
-sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijagadugxru shirxV shivarAtirxVshavxra shivayoVgigaLavariMda saMsAthxpitavAda sutUtxru jagadugxru piVThada divayx paraMpareyalilx baMda mahAnuBAvarugaLu loVkakalAyxNakAkxgi avisamxraNiVya seVveyanenxsagutatx baMdidAdxre. sAhitayxka caTuvaTikegaLige visheVSa porxVtAsxhavaninxtatx I piVThAdhipatigaLalilx kelavaru sAhitayxloVkakekx amUlayxvAda koDugegaLanunx koTiTxdAdxre. `parama shivAdhikayx cUDAmaNi'ge vAyxKAyxnavanunx baredu, maleya mAdeVshavxrarige Asharxya niVDida sidadhxnaMja deVshikeVMdarxru; `amugi deVvayayxgaLa sAMgatayx'vanunx bareda kavi shivaliMga\-deVvanige perxVraka-poVSakarAda kapini naMjuMDa deVshikeVMdarxru; toVMTada sidadhxliMga yatigaLa samakAliVnarAgi savxtaMtarx vacana\-kAra\-rAda GanaliMga shivayoVgigaLu; `maMtarxmahaSiR'gaLenisi `shivamaMtarx mahime' garxMthavanunx racisida jagadugxru shirxV shivarAtirxVshavxra mahAsAvxmigaLu; `GanaliMgadeVvara vacanagaLu' matutx shirxV gwriVshaMkara mahAsAvxmigaLavara `akakxmAdeVvi'\break caMpUkAvayx ivugaLanunx saMsakxrisi, saMpAdisikoTaTxvarU, nADina kalAyxNavanenxsagidavarU, pArxtaHsamxraNiVyarU Ada paramapUjayx shirxVmanamxhArAja rAjagurutilaka jagadugxru DA. shirxV shivarAtirx rAjeVMdarx mahAsAvxmigaLavaru - ivareV modalAdavaru sAhitayx, saMsakxqqti\-gaLa poVSakarAgi kavigaLige, kalAvidarige, vidAvxMsarige AsharxyadAtarAgidAdxre. I piVThavu saMsAthxpisiruva dhAmiRka, sheYkaSxNika, sAhitayxka hAgU sAMsakxqqtika saMsethxgaLalilx jagadugxru shirxV shivarAtirxVshavxra garxMtha\-mAleyU oMdu. sumAru 300kUkx hecucx mwlika garxMthagaLanunx parxkaTisiruva I mAleyalilx Iga \textbf{``shivapada ratanxkoVsha''}veMba mahatavxda kaqti parxkaTavAgutitxruvudu saMtoVSada saMgati.
+sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijagadugxru shirxV shivarAtirxVshavxra shivayoVgigaLavariMda saMsAthxpitavAda sutUtxru jagadugxru piVThada divayx paraMpareyalilx baMda mahAnuBAvarugaLu loVkakalAyxNakAkxgi avisamxraNiVya seVveyanenxsagutatx baMdidAdxre. sAhitayxka caTuvaTikegaLige visheVSa porxVtAsxhavaninxtatx I piVThAdhipatigaLalilx\break kelavaru sAhitayxloVkakekx amUlayxvAda koDugegaLanunx koTiTxdAdxre. `parama shivAdhikayx cUDAmaNi'ge vAyxKAyxnavanunx baredu, maleya mahadeVshavxrarige Asharxya niVDida sidadhxnaMja deVshikeVMdarx mahAsAvxmigaLu; `amugi deVvayayxgaLa sAMgatayx'vanunx bareda kavi shivaliMga\-deVvanige perxVraka-poVSakarAda kapini naMjuMDa deVshikeVMdarx mahAsAvxmigaLu; toVMTada sidadhxliMga yatigaLa samakAliVna\-rAgi savxtaMtarx vacana\-kAra\-rAda GanaliMga shivayoVgigaLu; `maMtarxmahaSiR'gaLenisi `shivamaMtarx mahime' garxMthavanunx racisida\break jagadugxru shirxV shivarAtirxVshavxra mahAsAvxmigaLu; `GanaliMgadeVvara vacanagaLu' matutx shirxV gwriVshaMkara mahAsAvxmigaLavara\break `akakxmAdeVvi' caMpUkAvayx ivugaLanunx saMsakxrisi, saMpAdisikoTaTxvarU, nADina kalAyxNavanenxsagidavarU, pArxtaHsamxraNiVyarU Ada paramapUjayx shirxVmanamxhArAja rAjagurutilaka jagadugxru DA. shirxV shivarAtirx rAjeVMdarx mahAsAvxmigaLavaru - ivareV modalAdavaru sAhitayx, saMsakxqqti\-gaLa poVSakarAgi kavigaLige, kalAvidarige, vidAvxMsarige AsharxyadAtarAgidAdxre. I piVThavu saMsAthxpisiruva dhAmiRka, sheYkaSxNika, sAhitayxka hAgU sAMsakxqqtika saMsethxgaLalilx jagadugxru shirxV shivarAtirxVshavxra garxMtha\-mAleyU oMdu. sumAru 300kUkx hecucx mwlika garxMthagaLanunx parxkaTisiruva I mAleyalilx Iga \textbf{``shivapada ratanxkoVsha''}veMba mahatavxda kaqti parxkaTavAgutitxruvudu saMtoVSada saMgati.
 
-\medskip
+\smallskip
 
-I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda 2011\,ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru aSeTxV alalxde saMsethxyiMda parxsAtxvane salilxsida kUDaleV maMjUrAti niVDi, haNa biDugaDegoLisidaru. saMsakxqqti matutx vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx mukatxkaMThadiMda shAlxGisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf \hbox{yoVjaneyeV} Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivara\-gaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru tamamx ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
+I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda 2011\,ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru aSeTxV alalxde saMsethxyiMda parxsAtxvane salilxsida kUDaleV maMjUrAti niVDi, haNa biDugaDegoLisidaru. saMsakxqqti matutx vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx mukatxkaMThadiMda shAlxGisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf \hbox{yoVjaneyeV} Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa \hbox{viVrasheYva} kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivara\-gaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru tamamx ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNi\-gaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABAri\-gaLA\-gidedxVve.
 
-\medskip
+\smallskip
 
 parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si.~shivapapx, parxsutxta nideVRshakarAda porx.~morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmi matutx shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx\break nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda} hAgU avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarf, shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBA, muKapuTa vinAyxsakarAda shirxV eM.esf. maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
 
-\medskip
-
-yoVjanege AthiRka sahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege, visheVSataH aMdu ilAKeya sacivarAgidadx, iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige, aBimAnapUvaRka vaMdanegaLu.
-
-\medskip
+\smallskip
 
 I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada pUjayx shirxV sidedhxVshavxrasAvxmigaLavarige namamx gwravada maNihavanunx salilxsa\-bayasutetxVve.
 
-\medskip
+\smallskip
 
 I pusatxkavanunx atayxlapx kAladalilx suMdaravAgi mudirxsikoTiTxruva beMgaLUrina lakiSxmXV mudarxNAlayadavarige namamx vaMdanegaLu.
 
